--- a/Mean_Revision_Dow_30_Analysis.ipynb
+++ b/Mean_Revision_Dow_30_Analysis.ipynb
@@ -712,7 +712,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Get decriptive statistics"
+    "### Get descriptive statistics|"
    ]
   },
   {
